fix footer align on img and p elements

--- a/css/style.css
+++ b/css/style.css
@@ -44,22 +44,37 @@ a {
     font-size: 1.5rem;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 section {
     display: flex;
+    flex-wrap: wrap;
 }
 
 article {
     flex: 1;
+    padding: 20px;
 }
 
 footer {
     display: flex;
+    align-items: center;
 }
 
 footer div {
     flex: 1;
+    width: 300px;
 }
+
 footer img {
     display: block;
     width: 50px;
+    padding: 0 0 0 20px;
+}
+
+footer p {
+    text-align: right;
+    padding: 0 20px 0 0;
 }
